--- a/tasks/replication.yml
+++ b/tasks/replication.yml
@@ -12,6 +12,19 @@
     - (mysql_replication_master | length) > 0
   tags: ['skip_ansible_galaxy']
 
+- name: Ensure replication user exists on slave.
+  mysql_user:
+    name: "{{ mysql_replication_user.name }}"
+    host: "{{ mysql_replication_user.host | default('%') }}"
+    password: "{{ mysql_replication_user.password }}"
+    priv: "{{ mysql_replication_user.priv | default('*.*:REPLICATION SLAVE,REPLICATION CLIENT') }}"
+    state: present
+  when:
+    - mysql_replication_role == 'slave'
+    - mysql_replication_user.name is defined
+    - (mysql_replication_master | length) > 0
+  tags: ['skip_ansible_galaxy']
+
 - name: Check slave replication status.
   mysql_replication:
     mode: getslave
